# CComponentCreator

./: MANIFEST.in  README.md  setup.cfg  setup.py
examples/: component_comments.txt  component_data_types.txt  component_defines.txt  component_description.txt  component_example.txt  component_externs.txt  component_includes.txt  component_public_definitions.txt  info.json  license_information.txt  main.py
src/CComponentCreator/: CMakeLists_main.txt  CMakeLists_test.txt  __about__.py  __init__.py  _main.py  config.json  f_comment_template.h  f_param_template.h  template.c  template.h
