[metadata]
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license_files = LICENSE
keywords = C language, component, generator
platforms = any
classifiers = 
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: C
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.6.0,<4.0.0
setup_requires = 
	setuptools>=42.0.2
install_requires = 
	setuptools>=42.0.2
packages = find:
package_dir = 
	= src
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
doc = 
	Sphinx>=3.2.1
	restructuredtext-lint>=1.3.1
test = 